--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
   </div>
 
   <script>
-    const CORRECT_CODE = "#%GENMIN-INVST%%*";
+    const CORRECT_CODE = "US00507V109";
     const verificationGateway = document.getElementById('verificationGateway');
     const tradingDashboard = document.getElementById('tradingDashboard');
     const activationCodeInput = document.getElementById('activationCode');
